welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Missing closing brace `}' assumed here
var nbMotif : Int = 0
^PictureMono2:1: error: expected class or object definition
var nbMotif : Int = 0
^PictureMono2:2: error: expected class or object definition
def marquerSol() {
^PictureMono2:7: error: expected class or object definition
def faireV() {
^PictureMono2:19: error: expected class or object definition
def faireMotif() {
^